// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-2-menu"
            role="combobox"
          >
            <label
              for="downshift-2-input"
              id="downshift-2-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
              disabled=""
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 ring-theme-background dark:bg-theme-secondary-700 dark:border-theme-secondary-700"
              />
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-2-menu"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                  data-testid="SelectDropdown__input"
                  disabled=""
                  id="downshift-2-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-2-label"
              class="styles__SelectOptionsList-b2falt-0 dyOwRR"
              id="downshift-2-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-0-menu"
            role="combobox"
          >
            <label
              for="downshift-0-input"
              id="downshift-0-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 ring-theme-background dark:bg-theme-secondary-700 dark:border-theme-secondary-700"
              />
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="SelectDropdown__input"
                  id="downshift-0-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-0-label"
              class="styles__SelectOptionsList-b2falt-0 dyOwRR"
              id="downshift-0-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="sr-only Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-invalid="true"
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdfBwQ iyevwF text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  alert-warning.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-4-menu"
            role="combobox"
          >
            <label
              for="downshift-4-input"
              id="downshift-4-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 ring-theme-background dark:bg-theme-secondary-700 dark:border-theme-secondary-700"
              />
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-4-menu"
                  aria-invalid="true"
                  aria-labelledby="downshift-4-label"
                  autocomplete="off"
                  class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="SelectDropdown__input"
                  id="downshift-4-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
              >
                <span
                  data-testid="Input__error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="pl-3"
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-4-label"
              class="styles__SelectOptionsList-b2falt-0 dyOwRR"
              id="downshift-4-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render with preselected address 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-6-menu"
            role="combobox"
          >
            <label
              for="downshift-6-input"
              id="downshift-6-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 ring-theme-background dark:bg-theme-secondary-700 dark:border-theme-secondary-700"
              />
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-6-menu"
                  aria-labelledby="downshift-6-label"
                  autocomplete="off"
                  class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="SelectDropdown__input"
                  id="downshift-6-input"
                  placeholder="Select option"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-6-label"
              class="styles__SelectOptionsList-b2falt-0 dyOwRR"
              id="downshift-6-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT
          …
        </div>
        <div
          class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-8-menu"
            role="combobox"
          >
            <label
              for="downshift-8-input"
              id="downshift-8-label"
            />
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                >
                  <img
                    alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                    title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                  />
                </div>
              </div>
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-8-menu"
                  aria-labelledby="downshift-8-label"
                  autocomplete="off"
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="SelectDropdown__input"
                  id="downshift-8-input"
                  placeholder="Select option"
                  value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center cursor-pointer"
                    data-testid="SelectRecipient__select-recipient"
                  >
                    <div
                      class="sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        user.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-8-label"
              class="styles__SelectOptionsList-b2falt-0 dyOwRR"
              id="downshift-8-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
